tests/expected/intrinsics/ctpop-ice/expected
error: Type check failed for intrinsic `ctpop`: Expected integer type, found ()
   |
12 |     let n = ctpop(());
   |             ^^^^^^^^^

error: aborting due to previous error